[package]
name = "oasis-log-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "libs/common",
    "libs/msg-pub"
]

[dependencies]
common = { version = "0.1.0", path = "libs/common" }
msg-pub = { version = "0.1.0", path = "libs/msg-pub", features = ["kafka"] }
#msg-pub = { version = "0.1.0", path = "libs/msg-pub" }

tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "net"] }
async-log-watcher = "0.0.1"
axum = { version = "0.7.1", features = ["macros"] }

#warp = "0.3"

#ntex = { version = "0.7.8", features = ["tokio"] }
#ntex-bytes = "0.1.21"
#ntex-files = "0.3.0"

#tide = "0.16.0"
#async-std = { version = "1.8.0", features = ["attributes"] }

#dotenv = "0.15.0"
#diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono"] }
#r2d2 = "0.8.10"
#uuid = { version = "1", features = ["serde", "v4"] }
#chrono = { version = "0.4.31", features = ["serde"] }
#jsonwebtoken = "9.1.0"
#thiserror = "1.0.50"
#reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }


[dev-dependencies]
