[package]
name = "trace-stream-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "libs/common",
    "libs/log-publish"
]

[dependencies]
common = { version = "0.1.0", path = "libs/common" }
log-publish = { version = "0.1.0", path = "libs/log-publish" }
#log-publish2 = { version = "0.1.0", path = "libs/log-publish2" }

tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
async-log-watcher = "0.0.1"
axum = { version = "0.7.4", features = ["macros"] }
openssl = "0.10.63"

#warp = "0.3"

#ntex = { version = "0.7.8", features = ["tokio"] }
#ntex-bytes = "0.1.21"
#ntex-files = "0.3.0"

#tide = "0.16.0"
#async-std = { version = "1.8.0", features = ["attributes"] }

#dotenv = "0.15.0"
#diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono"] }
#r2d2 = "0.8.10"
#uuid = { version = "1", features = ["serde", "v4"] }
#chrono = { version = "0.4.31", features = ["serde"] }
#jsonwebtoken = "9.1.0"
#thiserror = "1.0.50"
#reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }


[dev-dependencies]

#[target.x86_64-unknown-linux-gnu]
#linker = "x86_64-linux-musl-gcc"
#
##[target.x86_64-unknown-linux-gnu]
##xargo = false
##image = "togettoyou/ghcr.io.cross-rs.x86_64-unknown-linux-gnu:main"
#
#[target.x86_64-unknown-linux-musl]
#linker = "x86_64-linux-musl-gcc"
#
#[target.aarch64-unknown-linux-gnu]
#xargo = false
#image = "togettoyou/ghcr.io.cross-rs.aarch64-unknown-linux-gnu:main"
