[package]
name = "trace-stream-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "componets/ntex-auth",
    "componets/common",
    "componets/log-upload",
    "trace-server",
    "trace-stream",
]

[[bin]]
name = "trace-stream"
path = "trace-stream/src/main.rs"

[[bin]]
name = "trace-server"
path = "trace-server/src/main.rs"
