[package]
name = "trace-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7.8", features = ["tokio"] }
ntex-bytes = "0.1.21"
jsonwebtoken = "9.1.0"
futures = "0.3.29"


log = "0.4.20"
log4rs = { version = "1.3.0", features = ["gzip"] }
rand = "0.8.5"
strum_macros = "0.26.1"
chrono = { version = "0.4.31", features = [] }
byte-unit = "4.0.17"
log-panics = { version = "2", features = ["with-backtrace"] }
common = { version = "0.1.0", path = "../libs/common" }
regex = { version = "1.5.4", features = [] }
# 压缩文件库
flate2 = "1.0"
config = "0.14.0"
anyhow = { version = "1.0.80", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
serde_derive = "1.0.196"
tokio = "1.36.0"