[package]
name = "trace-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../components/common" }
ntex-auth = { version = "0.1.0", path = "../components/ntex-auth" }

ntex = { version = "0.7.8", features = ["tokio"] }
ntex-bytes = "0.1.21"

log = "0.4.20"
#strum_macros = "0.26.1"
#chrono = { version = "0.4.31", features = [] }
regex = { version = "1.5.4", features = [] }
# 压缩文件库
flate2 = "1.0"
config = "0.14.0"
#anyhow = { version = "1.0.80", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
#serde_json = "1.0.114"
serde_derive = "1.0.196"
tokio = "1.36.0"
#tikv-jemallocator = "0.5"
#jemallocator = "0.5.4"

[profile.release]
codegen-units = 1
