[package]
name = "trace-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../components/common" }
log-upload = { version = "0.1.0", path = "../components/log-upload" }
ntex-auth = { version = "0.1.0", path = "../components/ntex-auth" }

ntex = { version = "0.7.8", features = ["tokio"] }
anyhow = { version = "1.0.80", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
async-log-watcher = "0.0.1"