[package]
name = "log-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
rdkafka = { version = "0.36.2" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
reqwest = { version = "0.11.24", features = ["multipart", "blocking"] }
lapin = { version = "2.3.1" }
futures-lite = "2.2.0"
async-global-executor = "2.4.1"
thiserror = "1.0.57"
config = "0.14.0"
serde_derive = "1.0.196"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing-subscriber = "0.3.18"
kafka = "0.10.0"
futures = { version = "0.3.30", features = [] }
rand = "0.8.5"
clap = "4.5.1"


[features]
default = []
full = [
    "kafka",
    "rabbitmq"
]
kafka = [
    "rdkafka/cmake-build",
    "rdkafka/gssapi-vendored"
]
rabbitmq = [
    "lapin/amq-protocol-codegen"
]