[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
derive_more = "0.99.17"

anyhow = { version = "1.0.75", features = [] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.192"
#futures = "0.3.29"
#derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4"
pnet = "0.34.0"

[dev-dependencies]
get_if_addrs = "0.5.3"
# windows系统
ipconfig = "0.3.2"