[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
thiserror = "1.0.57"
chrono = "0.4.34"

anyhow = { version = "1.0.80", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.109"
serde_derive = "1.0.196"
#futures = "0.3.29"
#derive_more = "0.99.17"
env_logger = "0.10.2"
log = "0.4.20"
pnet = "0.34.0"
bcrypt = "0.15.0"
md5 = "0.7"

[dev-dependencies]
get_if_addrs = "0.5.3"
# windows系统
ipconfig = "0.3.2"