[package]
name = "msg-pub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.0" }
common = { version = "0.1.0", path = "../common" }

[features]
default = []
full = [
    "kafka",
    "rabbitmq"
]
kafka = [
    "rdkafka/cmake-build",
    "rdkafka/gssapi-vendored"
]
rabbitmq = []