[package]
name = "msg-pub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
rdkafka = { version = "0.36.0" }

lapin = { version = "2.3.1", features = ["amq-protocol-codegen"] }
futures-lite = "2.1.0"
async-global-executor = "2.4.1"


[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing-subscriber = "0.3.18"
kafka = "0.10.0"
futures = { version = "0.3.30", features = [] }
rand = "0.8.5"
clap = "4.4.11"


[features]
default = []
full = [
    "kafka",
    "rabbitmq"
]
kafka = [
    "rdkafka/cmake-build",
    "rdkafka/gssapi-vendored"
]
rabbitmq = [
#    "amq-protocol-codegen"
]